# practice-c

Assignment1/: CMakeLists.txt  main.c  vc_is_negative.c  vc_is_negative.h  vc_print_alphabet.c  vc_print_alphabet.h  vc_print_comb.c  vc_print_comb.h  vc_print_comb2.c  vc_print_comb2.h  vc_print_numbers.c  vc_print_numbers.h  vc_print_reverse_alphabet.c  vc_print_reverse_alphabet.h  vc_putnbr.h
Assignment1/answers/: vc_is_negative.c  vc_print_alphabet.c  vc_print_comb.c  vc_print_comb2.c  vc_print_combn.c  vc_print_combn_recur.c  vc_print_numbers.c  vc_print_reverse_alphabet.c  vc_putnbr.c
Assignment2/: CMakeLists.txt  main.c  vc_atoi.c  vc_atoi.h  vc_div_mod.c  vc_div_mod.h  vc_pt.c  vc_pt.h  vc_putstr.c  vc_putstr.h  vc_sort_int_table.c  vc_strlen.c  vc_strlen.h  vc_strrev.c  vc_strrev.h  vc_swap.c  vc_swap.h  vc_ultimate_div_mod.c  vc_ultimate_div_mod.h  vc_ultimate_pt.c  vc_ultimate_pt.h
Assignment2/answers/: vc_atoi.c  vc_div_mod.c  vc_pt.c  vc_putstr.c  vc_sort_integer_table.c  vc_strlen.c  vc_strrev.c  vc_swap.c  vc_ultimate_div_mod.c  vc_ultimate_pt.c
Assignment3/: CMakeLists.txt  main.c  vc_fibonacci.c  vc_fibonacci.h  vc_find_next_prime.c  vc_is_prime.c  vc_iterative_factorial.c  vc_iterative_factorial.h  vc_iterative_power.c  vc_iterative_power.h  vc_recursive_factorial.c  vc_recursive_factorial.h  vc_recursive_power.c  vc_recursive_power.h  vc_sqrt.c
Assignment3/answers/: vc_fibonacci.c  vc_find_next_prime.c  vc_is_prime.c  vc_iterative_factorial.c  vc_iterative_power.c  vc_recursive_factorial.c  vc_recursive_power.c  vc_sqrt.c
Assignment5/: CMakeLists.txt  main.c  vc_print_memory.c  vc_print_memory.h  vc_putstr_non_printable.c  vc_putstr_non_printable.h  vc_str_is_alpha.c  vc_str_is_alpha.h  vc_str_is_lowercase.c  vc_str_is_lowercase.h  vc_str_is_numeric.c  vc_str_is_numeric.h  vc_str_is_printable.c  vc_str_is_printable.h  vc_str_is_uppercase.c  vc_str_is_uppercase.h  vc_strcat.c  vc_strcat.h  vc_strlcat.c  vc_strlcat.h  vc_strlcpy.c  vc_strlcpy.h  vc_strncat.c  vc_strncat.h
Assignment5/answers/: vc_print_memory.c  vc_putstr_non_printable.c  vc_str_is_lowercase.c  vc_str_is_numeric.c  vc_str_is_uppercase.c  vc_strcat.c  vc_strlcat.c  vc_strlcpy.c
Assignment7/: CMakeLists.txt  main.c  vc_concat_params.c  vc_concat_params.h  vc_convert_base.c  vc_convert_base.h  vc_range.c  vc_range.h  vc_split_whitespaces.c  vc_strdup.c  vc_strdup.h  vc_ultimate_range.c  vc_ultimate_range.h
Assignment7/answers/: vc_concat_params.c  vc_convert_base.c  (+5 more)
Assignment9/: CMakeLists.txt  main.c
Project1/: CMakeLists.txt  libvc.h  main.c  test_vc_isalnum.c  test_vc_memchr.c  test_vc_memcmp.c  test_vc_memdel.c  test_vc_memmove.c  test_vc_strchr.c  test_vc_strmap.c  test_vc_strsplit.c  vc_isalnum.c  vc_isalnum.h  vc_memchr.c  vc_memchr.h  vc_memcmp.c  vc_memcmp.h  vc_memdel.c  vc_memdel.h  vc_memmove.c  vc_memmove.h  vc_strchr.c  vc_strchr.h  vc_strmap.c  vc_strmap.h  vc_strsplit.c  vc_strsplit.h
(+58 files in other folders)
