cmake_minimum_required(VERSION 3.13)
project(Assignment1 C)

set(CMAKE_C_STANDARD 99)

add_executable(Assignment1 main.c vc_print_alphabet.h vc_print_alphabet.c vc_print_reverse_alphabet.h vc_print_reverse_alphabet.c vc_print_numbers.h vc_print_numbers.c vc_is_negative.h vc_is_negative.c vc_print_comb.h vc_print_comb.c vc_putnbr.h vc_putnbr.c vc_print_comb2.h vc_print_comb2.c)