cmake_minimum_required(VERSION 3.13)
project(Assignment3 C)

set(CMAKE_C_STANDARD 99)

add_executable(Assignment3 main.c vc_iterative_factorial.h vc_iterative_factorial.c vc_recursive_factorial.h vc_recursive_factorial.c vc_iterative_power.h vc_iterative_power.c vc_recursive_power.h vc_recursive_power.c vc_fibonacci.h vc_fibonacci.c)