cmake_minimum_required(VERSION 3.13)
project(Assignment5 C)

set(CMAKE_C_STANDARD 99)

add_executable(Assignment5 main.c vc_str_is_alpha.h vc_str_is_alpha.c vc_str_is_numeric.h vc_str_is_numeric.c vc_str_is_lowercase.h vc_str_is_lowercase.c vc_str_is_uppercase.h vc_str_is_uppercase.c vc_str_is_printable.h vc_str_is_printable.c vc_strcat.h vc_strcat.c vc_strncat.h vc_strncat.c vc_strlcat.h vc_strlcat.c vc_strlcpy.h vc_strlcpy.c vc_putstr_non_printable.h vc_putstr_non_printable.c vc_print_memory.h vc_print_memory.c)