cmake_minimum_required(VERSION 3.13)
project(Assignment7 C)

set(CMAKE_C_STANDARD 99)

add_executable(Assignment7 main.c vc_strdup.h vc_strdup.c vc_range.h vc_range.c vc_ultimate_range.h vc_ultimate_range.c vc_concat_params.h vc_concat_params.c vc_split_whitespaces.h vc_split_whitespaces.c vc_convert_base.h vc_convert_base.c)