cmake_minimum_required(VERSION 3.13)
project(Assignment9 C)

set(CMAKE_C_STANDARD 99)

add_executable(Assignment9 main.c vc_foreach.h vc_foreach.c vc_putnbr.c vc_putnbr.h vc_map.h vc_map.c vc_any.h vc_any.c vc_count_if.h vc_count_if.c vc_is_sort.h vc_is_sort.c vc_sort_words.h vc_sort_words.c vc_split_whitespaces.h vc_split_whitespaces.c)